# json_schema_discovery

./: .gitignore  README.rst  pyproject.toml
json_schema_discovery/: __init__.py  schemas.py
tests/: test_json_schema_discovery.py
