[tool.poetry]
name = "json-schema-discovery"
version = "0.1.0"
description = "Database-agnostic JSON schema discovery"
authors = ["Stepland <Stepland@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
rope = "^0.14.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
